--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,10 @@
 
     <dependencies>
         <!-- Add dependencies if required -->
+         
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>    
     </dependencies>
 </project>
