--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
 
@@ -35,6 +36,35 @@
                     </archive>
                 </configuration>
             </plugin>
+
+            <!-- Optional: Clean Plugin for cleaning up old artifacts -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>target</directory>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+
+            <!-- Optional: Shade Plugin for creating an uber-JAR -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -46,5 +76,16 @@
             <version>4.13.2</version>
             <scope>test</scope>    
         </dependency>
+
+        <!-- Add more dependencies if required -->
     </dependencies>
+
+    <!-- Optional: Configure a repository for fetching dependencies -->
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+        <!-- You can add custom repositories here if needed -->
+    </repositories>
 </project>
